# QmlGameYazovskikh

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/core/: theme_singleton.cpp  theme_singleton.h
src/qml/: GamePalette.qml  Main.qml  Theme.qml
